codigo quase finalizado

--- a/src/main/java/com/mycompany/components/FlashCardPanel.form
+++ b/src/main/java/com/mycompany/components/FlashCardPanel.form
@@ -130,6 +130,9 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTextPane" name="textPanePergunta">
+          <Properties>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="textPanePergunta.setText(flashCard.getPergunta());"/>
           </AuxValues>
@@ -144,6 +147,9 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTextPane" name="textPaneResposta">
+          <Properties>
+            <Property name="enabled" type="boolean" value="false"/>
+          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="textPaneResposta.setText(flashCard.getResposta());"/>
           </AuxValues>
