--- a/src/main/java/com/mycompany/views/TelaPrincipal.form
+++ b/src/main/java/com/mycompany/views/TelaPrincipal.form
@@ -162,6 +162,9 @@
                 <Property name="horizontalTextPosition" type="int" value="0"/>
                 <Property name="verticalTextPosition" type="int" value="3"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoPomodoroActionPerformed"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="botaoPomodoro.setBackground(new Color(70,130,180));"/>
               </AuxValues>
