--- a/src/main/java/com/mycompany/components/BaralhosCard.form
+++ b/src/main/java/com/mycompany/components/BaralhosCard.form
@@ -73,6 +73,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="PRATICAR"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoPraticarActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JLayeredPane" name="jLayeredPane1">
 
