--- a/src/main/java/com/mycompany/components/DisciplinaCardPanel.form
+++ b/src/main/java/com/mycompany/components/DisciplinaCardPanel.form
@@ -107,7 +107,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="valorMediaAtualLabel">
       <Properties>
-        <Property name="text" type="java.lang.String" value="0.0"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="String.valueOf(GerenciadorPeriodos.buscarMediaDaDisciplina(disciplina.getId()))" type="code"/>
+        </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="mediaAtualLabel">
