--- a/src/main/java/com/mycompany/views/AdicionarFlashCard.form
+++ b/src/main/java/com/mycompany/views/AdicionarFlashCard.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
@@ -136,7 +136,7 @@
               <Font name="Arial" size="12" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="ADICINONAR NOVA AVALIA&#xc7;&#xc3;O"/>
+            <Property name="text" type="java.lang.String" value="ADICINONAR NOVO FLASHCARD"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="respostaLabel">
